--- a/templates/website/service/index.html.twig
+++ b/templates/website/service/index.html.twig
@@ -102,12 +102,102 @@
                     {{ knp_pagination_render(projets) }}
                 </nav>            
 
-              {# <div class="general-btn text-center">       
-                <a class="btn btn-primary" href="{{path('web_services_rendus')}}">Voir tous les projets</a>
-              </div> #}
+ 
             </div>
 
           </div><!-- Content row end -->
+          {% else %}
+
+          <section id="main-container" class="main-container">
+            <div class="container">
+              <div class="row">
+                <div class="col-12">
+                  <div class="shuffle-btn-group">
+                    <label class="active" for="all">
+                      <input type="radio" name="shuffle-filter" id="all" value="all" checked="checked">TOUT
+                    </label>
+                    <label for="reseau">
+                      <input type="radio" name="shuffle-filter" id="reseau" value="reseau">RÉSEAU
+                    </label>
+                    <label for="distribution">
+                      <input type="radio" name="shuffle-filter" id="distribution" value="distribution">DISTRIBUTION
+                    </label>
+                    <label for="maintenance">
+                      <input type="radio" name="shuffle-filter" id="maintenance" value="maintenance">MAINTENANCE
+                    </label>
+                    <label for="formation">
+                      <input type="radio" name="shuffle-filter" id="formation" value="formation">FORMATION
+                    </label>
+                    <label for="consultance">
+                      <input type="radio" name="shuffle-filter" id="consultance" value="consultance">CONSULTANCE
+                    </label>
+                    <label for="autres">
+                      <input type="radio" name="shuffle-filter" id="autres" value="autres">AUTRES
+                    </label>
+                  </div><!-- project filter end -->
+
+
+                  <div class="row shuffle-wrapper">
+                    <div class="col-1 shuffle-sizer"></div>
+
+                    <div class="col-lg-4 col-md-6 shuffle-item" data-groups="[&quot;maintenance&quot;,&quot;autres&quot;]">
+                      <div class="project-img-container">
+                        <a class="gallery-popup" href="/assets/images/projects/project1.jpg" aria-label="project-img">
+                          <img class="img-fluid" src="/assets/images/projects/project1.jpg" alt="project-img">
+                          <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                        </a>
+                        <div class="project-item-info">
+                          <div class="project-item-info-content">
+                            <h3 class="project-item-title">
+                              <a href="#"></a>
+                            </h3>
+                            <p class="project-cat">Réseau, Autre</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div><!-- shuffle item 1 end -->
+
+                    <div class="col-lg-4 col-md-6 shuffle-item" data-groups="[&quot;autres&quot;]">
+                      <div class="project-img-container">
+                        <a class="gallery-popup" href="/assets/images/projects/project2.jpg" aria-label="project-img">
+                          <img class="img-fluid" src="/assets/images/projects/project2.jpg" alt="project-img">
+                          <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                        </a>
+                        <div class="project-item-info">
+                          <div class="project-item-info-content">
+                            <h3 class="project-item-title">
+                              <a href="#"></a>
+                            </h3>
+                            <p class="project-cat">Autres</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div><!-- shuffle item 2 end -->
+
+                    <div class="col-lg-4 col-md-6 shuffle-item" data-groups="[&quot;formation&quot;,&quot;reseau&quot;]">
+                      <div class="project-img-container">
+                        <a class="gallery-popup" href="/assets/images/projects/project3.jpg" aria-label="project-img">
+                          <img class="img-fluid" src="/assets/images/projects/project3.jpg" alt="project-img">
+                          <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                        </a>
+                        <div class="project-item-info">
+                          <div class="project-item-info-content">
+                            <h3 class="project-item-title">
+                              <a href="#"></a>
+                            </h3>
+                            <p class="project-cat">Formation</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div><!-- shuffle item 3 end -->
+                  </div><!-- shuffle end -->
+                </div>
+
+
+              </div><!-- Content row end -->
+
+            </div><!-- Conatiner end -->
+          </section>
         {% endif %}
 
       </div>
