--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -269,8 +269,11 @@
                     <div class="row">
                         <div class="col-lg-4">
                         <div class="subscribe-call-to-acton">
-                            <h3>Besoins d'aide?</h3>
-                            <h4>+228 98 25 62 26</h4>
+                            <h3>Besoins d'aide ?</h3>
+                            <div class="call-to-action-btn">
+                                <a class="btn btn-primary" href="/contact">Contactez nous</a>
+                            </div>
+                            {# <h4>+228 98 25 62 26</h4> #}
                         </div>
                         </div><!-- Col end -->
 
