--- a/templates/pages/homepage.html.twig
+++ b/templates/pages/homepage.html.twig
@@ -70,7 +70,7 @@
               </div><!-- Col end -->
               <div class="col-md-4 text-center text-md-right mt-3 mt-md-0">
                   <div class="call-to-action-btn">
-                    <a class="btn btn-primary" href="contact.html">Contactez nous</a>
+                    <a class="btn btn-primary" href="/contact">Contactez nous</a>
                   </div>
               </div><!-- col end -->
             </div><!-- row end -->
