--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,11 +14,14 @@
             "shadowBaseLocale": shadowBaseLocale|default(),
         } %}
     {% endblock %}
-    <meta name="description" content="Servicse informatiques">
+    <meta name="description" content="La technologie au service de l'informatique">
+    <meta name="robots" content="index, follow">
 
   <!-- Favicon
 ================================================== -->
-  <link rel="icon" type="image/ico" href="/favicon.ico">
+    <link rel="icon" type="image/ico" href="/favicon.ico">
+    <link href="/apple-touch-icon.png" rel="apple-touch-icon">
+
 
   <!-- CSS
 ================================================== -->
