--- a/templates/error/error.html.twig
+++ b/templates/error/error.html.twig
@@ -1,6 +1,15 @@
-{% extends "base.html.twig" %}
-{% block title %}<title>Quantum - Error</title>{% endblock %}
+
+{% extends "error/errorsbase.html.twig" %}
 
 {% block content %}
-    <h1>Error {{ status_code }}: {{ status_text }}</h1>
+	<div id="notfound">
+		<div class="notfound">
+			<div class="notfound-404"></div>
+			<h1>{{ status_code }}</h1>
+			<h2>Oops! {{ status_text }}</h2>
+			<p>Sorry but the page you are looking for does not exist, have been removed. name changed or is temporarily unavailable</p>
+			<a href="/">Back to homepage</a>
+		</div>
+	</div>
+
 {% endblock %}
