--- a/templates/website/aboutus.html.twig
+++ b/templates/website/aboutus.html.twig
@@ -55,12 +55,13 @@
                         {% for media in article.medias %}
                             {% set image = sulu_resolve_media(media,app.request.locale) %}
                             {% if image %}
+
                                 {% set imageUrl = image.formats['555x330'] %}
                                 <div class="item" style="background-image:url({{imageUrl}})">
                                     <div class="container">
                                         <div class="box-slider-content">
                                         <div class="box-slider-text">
-                                            <h2 class="box-slide-title">{{image.name | split('.', 2)[0] }}</h2>
+                                            <h2 class="box-slide-title">{{image.title | split('.', 2)[0] }}</h2>
                                         </div>    
                                         </div>
                                     </div>
