--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -155,7 +155,7 @@
                     <label>Message</label>
                     <textarea class="form-control form-control-message" name="message" id="message" placeholder="" rows="10"
                     required></textarea>
-                    <input type="hidden" name="recaptcha-response" id="recaptchaResponse">
+                    <input type="hidden" name="recaptcha-contact" id="recaptchaContact">
                 </div>
                 <div class="text-right"><br>
                     <button class="btn btn-primary solid blank" type="submit">Envoyer Message</button>
@@ -170,7 +170,7 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="https://www.google.com/recaptcha/api.js?render=6Lcco4QpAAAAAOePvPxh5DwGcbeYoCjQY-tfWIxm"></script>
+    {# <script src="https://www.google.com/recaptcha/api.js?render=6Lcco4QpAAAAAOePvPxh5DwGcbeYoCjQY-tfWIxm"></script>
     <script>
 
     const key="6Lcco4QpAAAAAOePvPxh5DwGcbeYoCjQY-tfWIxm";
@@ -181,6 +181,6 @@
                 document.getElementById("recaptchaResponse").value = token;
             });
         }); 
-    </script>
+    </script> #}
 
 {% endblock %}
