--- a/templates/pages/homepage.html.twig
+++ b/templates/pages/homepage.html.twig
@@ -285,7 +285,7 @@
                       </div>
                       <div class="ts-service-box-info">
                         <h3 class="service-box-title"><a href="{{path('web_specialite',{'slug': specialite.slug})}}">{{specialite.titre | title}}</a></h3>
-                        <p>{{specialite.titre | striptags | truncate(100,true) | raw}}</p>
+                        <p>{{specialite.contenu | striptags | truncate(100,true) | raw}}</p>
                       </div>
                   </div><!-- Service 1 end -->                
 
@@ -311,7 +311,7 @@
                       </div>
                       <div class="ts-service-box-info">
                         <h3 class="service-box-title"><a href="{{path('web_specialite',{'slug': specialite.slug})}}">{{specialite.titre | title}}</a></h3>
-                        <p>{{specialite.titre | striptags | truncate(100,true) | raw}}</p>
+                        <p>{{specialite.contenu | striptags | truncate(100,true) | raw}}</p>
                       </div>
                   </div><!-- Service 1 end -->                
 
@@ -418,9 +418,7 @@
                       <div class="item">
                         <div class="quote-item">
                             <span class="quote-text">
-                              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci done idunt ut
-                              labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitoa tion ullamco laboris
-                              nisi ut commodo consequat.
+                              {{temoignage.contenu}}
                             </span>
 
                             <div class="quote-item-footer">
@@ -429,8 +427,8 @@
                                 <img loading="lazy" class="testimonial-thumb" src="{{image.formats['100x100']}}" alt="testimonial">
                               {% endif %}
                               <div class="quote-item-info">
-                                  <h3 class="quote-author">Gabriel Denis</h3>
-                                  <span class="quote-subtext">Chairman, OKT</span>
+                                  <h3 class="quote-author">{{temoignage.titre}}</h3>
+                                  <span class="quote-subtext">{{temoignage.description}}</span>
                               </div>
                             </div>
                         </div><!-- Quote item end -->
